<resources>
    <string name="app_name">News Api</string>

    <!--Connection-->
    <string name="error_no_internet_connection" translatable="false">@string/noInternet</string>
    <string name="error_timeout" translatable="false">@string/somethingWrong</string>
    <string name="error_unknown_error_occurred" translatable="false">@string/somethingWrong</string>
    <string name="error_server_error" translatable="false">@string/somethingWrong</string>
    <string name="somethingWrong">Sorry, Something went wrong</string>
    <string name="noInternet">No internet connection. Please connect to the internet to be able to use the application</string>
    <string name="loading">…</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome</string>
    <string name="user_name">Tohami Hussin</string>
    <string name="arrow">arrow</string>
    <string name="explore">Explore</string>
    <string name="chat">Live Chat</string>
    <string name="gallery">Gallery</string>
    <string name="wish_list">Wish List</string>
    <string name="magazine">E-magazine</string>
    <string name="clicked">%s clicked %s</string>
    <string name="open_website">Open Website</string>

</resources>
