<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_item_explore"
        android:icon="@drawable/ic_explore"
        android:title="@string/explore" />
    <item
        android:id="@+id/menu_item_chat"
        android:icon="@drawable/ic_live"
        android:title="@string/chat" />
    <item
        android:id="@+id/menu_item_gallery"
        android:icon="@drawable/ic_gallery"
        android:title="@string/gallery" />
    <item
        android:id="@+id/menu_item_wish_list"
        android:icon="@drawable/ic_wish_list"
        android:title="@string/wish_list" />
    <item
        android:id="@+id/menu_item_magazine"
        android:icon="@drawable/ic_magazine"
        android:title="@string/magazine" />
</menu>