<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_profile"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:src="@drawable/ic_profile"
        android:tint="@color/colorPrimary"
        app:civ_border_width="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:civ_border_color="#FF000000"/>
    
    <ImageView
        android:id="@+id/iv_arrow"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:src="@drawable/ic_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:adjustViewBounds="true"
        android:tint="@color/colorPrimaryDark"
        android:contentDescription="@string/arrow" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="@dimen/small_text_size"
        android:text="@string/welcome"
        android:layout_marginStart="@dimen/row_item_margin_horizontal"
        android:layout_marginEnd="@dimen/row_item_margin_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_user_name"
        app:layout_constraintStart_toEndOf="@id/iv_profile"
        app:layout_constraintEnd_toStartOf="@id/iv_arrow"
        android:gravity="start|bottom"/>

    <TextView
        android:id="@+id/tv_user_name"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:textSize="@dimen/mid_text_size"
        android:text="@string/user_name"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome"
        app:layout_constraintStart_toStartOf="@id/tv_welcome"
        app:layout_constraintEnd_toEndOf="@id/tv_welcome"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="start|top"/>
</androidx.constraintlayout.widget.ConstraintLayout>